fix: add '@types/three' dependency to package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19",
+    "@types/three": "^0.176.0",
     "autoprefixer": "^10.4.21",
     "css-loader": "^7.1.2",
     "eslint": "^9",
